--- a/src/main/resources/public/terrenfy.html
+++ b/src/main/resources/public/terrenfy.html
@@ -6,7 +6,9 @@
     <title>Interpolación de Newton</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.5.2/math.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.min.js"></script>
 </head>
 <body class="container mt-5">
     <h1 class="mb-4">Interpolación de Newton</h1>
@@ -31,7 +33,7 @@
                 </tbody>
             </table>
             <div>
-                <button type="button" class="btn btn-primary mb-2" onclick="addDataField()">Agregar</button>
+                <button style="background-color: #161929; color: white;" type="button" class="btn  mb-2" onclick="addDataField()">Agregar</button>
             </div>
         </div>
     </form>
@@ -46,37 +48,59 @@
             <tr>
                 <td><input type="number" class="form-control" id="degree" placeholder="Grado del polinomio" required></td>
                 <td>
-                    <button type="button" class="btn btn-success mb-2" onclick="generateModel()">Generar Modelo</button>
+                    <button style="background-color: #161929; color: white;" type="button" class="btn  mb-2" onclick="generateModel()">Generar Modelo</button>
                 </td>
             </tr>
         </tbody>
     </table>
     <h2>Modelo Matemático</h2>
     <p id="model" class="mb-3"></p>
-    <div class="chart-container" style="position: relative; height:40vh; width:80vw">
-        <canvas id="lineChart"></canvas>
+    <p id="simplifiedModel" class="mb-3"></p>
+    <div id="procedure"></div>
+    <input type="file" id="fileInput" />
+    <div id="mod-black"></div>
+    <div class="d-flex justify-content-center">
+        <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+            <canvas id="lineChart"></canvas>
+        </div>
     </div>
-    <div class="chart-container" style="position: relative; height:40vh; width:80vw">
-        <canvas id="scatterChart"></canvas>
+    <div class="d-flex justify-content-center">
+        <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+            <canvas id="scatterChart"></canvas>
+        </div>
     </div>
     <script src="js/scrippter.js"></script>
+
     <script>
-        document.getElementById('model-link').addEventListener('click', function(event) {
-            event.preventDefault();
-            fetch('terrenfy.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('content').innerHTML = data;
-                    // Mostrar los scripts incluidos en terrenfy.html
-                    const scripts = new DOMParser().parseFromString(data, 'text/html').querySelectorAll('script');
-                    scripts.forEach(script => {
-                        const newScript = document.createElement('script');
-                        newScript.src = script.src;
-                        document.body.appendChild(newScript);
-                    });
-                })
-                .catch(error => console.error('Error al cargar la página:', error));
-        });
+        async function sendDataToInterpolation() {
+            const xValues = Array.from(document.querySelectorAll('input[name="xValue[]"]')).map(input => parseFloat(input.value));
+            const fxValues = Array.from(document.querySelectorAll('input[name="fxValue[]"]')).map(input => parseFloat(input.value));
+
+            const data = {
+                x: xValues,
+                fx: fxValues
+            };
+
+            try {
+                const response = await fetch('/interpolacion', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const result = await response.json();
+                console.log('Interpolation result:', result);
+            } catch (error) {
+                console.error('Error sending data to interpolation:', error);
+            }
+        }
     </script>
+   
 </body>
 </html>
